Endret slik at boksen kommer opp uten å videresende

--- a/Lab2/Lab2v2.html
+++ b/Lab2/Lab2v2.html
@@ -40,9 +40,9 @@
 <!-- Navigasjonslinkene til venstre -->
 <ul class="navbar">
   <li><a href="Lab2.html">Hjem </a>
-  <li><a href="Kronologisk.html" onclick="alert('Denne siden er under konstruksjon') ">Kronologisk</a>
-  <li><a href="Herakisk.html"onclick="alert('Denne siden er under konstruksjon') ">Herakisk</a>
-  <li><a href="Alfabetisk.html"onclick="alert('Denne siden er under konstruksjon') ">Alfabetisk</a>
+  <li><a href="#" onclick="alert('Denne siden er under konstruksjon') ">Kronologisk</a>
+  <li><a href="#" onclick="alert('Denne siden er under konstruksjon') ">Herakisk</a>
+  <li><a href="#" onclick="alert('Denne siden er under konstruksjon') ">Alfabetisk</a>
 </ul>
 
 <!-- Overskrift -->
